# VT_BulkHashCheker

./: README.md  VT_Bulkhashchecker.py  pyproject.toml  samplehashes.txt  sampleresults.xlsx
